# LibreMore

./: .env.example  .gitignore  README.md  package-lock.json  package.json  vercel.json
backend/: pyproject.toml
backend/alembic/versions/: 0001_init.sql
backend/app/: config.py  deps.py  main.py  models.py  schemas.py
backend/app/ext/: __init__.py  calil.py  cinii.py  ndl.py  opac_link.py
backend/app/routers/: __init__.py  auth.py  availability.py  goals.py  mypage.py  recommend.py
backend/app/services/: goals.py  recommendation.py
backend/tests/: test_calil.py  test_health.py
frontend/: next.config.mjs  package-lock.json  package.json  postcss.config.mjs  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/goals/[id]/: page.tsx
frontend/app/mypage/: page.tsx
frontend/components/: book-card.tsx  token-gate.tsx
frontend/lib/: api.ts
frontend/styles/: globals.css
